<resources>
    <string name="A001">Advertising ID is not set!</string>
    <string name="A002">No inventory, please contact SDK provider!</string>
    <string name="A003">No ad slot is available or the ad slot ID is incorrect</string>
    <string name="A004">Ads are not enabled</string>
    <string name="A005">Ad is not ready</string>
    <string name="A006">view cannot be empty</string>
    <string name="A007">Listener cannot be empty</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cant_be_completed">The requested action could not be completed.</string>
    <string name="adactivity_missing">%s was not detected in AndroidManifest.xml!</string>
    <string name="adactivity_no_type">AdActivity launched with no type.</string>
    <string name="adgo_splash_skip_name">跳过</string>
    <string name="adsize_too_big" formatted="false">E103: You requested an Ad larger than the measured ad space. Ad space size: %dx%d, request size: %dx%d</string>
    <string name="aes_seed">!@#$</string>
    <string name="alart_agree_txt">已阅读并同意</string>
    <string name="alart_agree_txt_en">Read and agree</string>
    <string name="alart_cancel_txt_cn">否</string>
    <string name="alart_cancel_txt_dutch">Niet</string>
    <string name="alart_cancel_txt_en">NO</string>
    <string name="alart_cancel_txt_fra">non</string>
    <string name="alart_cancel_txt_span">NO</string>
    <string name="alart_confirm_txt_cn">是</string>
    <string name="alart_confirm_txt_dutch">- ja</string>
    <string name="alart_confirm_txt_en">YES</string>
    <string name="alart_confirm_txt_fra">oui</string>
    <string name="alart_confirm_txt_span">Sí</string>
    <string name="alart_content_txt_cn">是否删除文件?</string>
    <string name="alart_content_txt_dutch">Weet u zeker dat u het bestand wilt verwijderen?</string>
    <string name="alart_content_txt_en">Are you sure you want to delete the file?</string>
    <string name="alart_content_txt_fra">Êtes-vous sûr de vouloir supprimer le fichier?</string>
    <string name="alart_content_txt_span">¿Está seguro de querer eliminar el archivo?</string>
    <string name="alart_disagree_txt">取消</string>
    <string name="alart_disagree_txt_en">cancel</string>
    <string name="alart_title_txt_cn">删除文件</string>
    <string name="alart_title_txt_dutch">Verwijder bestand</string>
    <string name="alart_title_txt_en">Delete File</string>
    <string name="alart_title_txt_fra">Supprimer Fichier</string>
    <string name="alart_title_txt_span">VEliminar archivo</string>
    <string name="allow">Allow</string>
    <string name="already_expanded">Cannot load a new ad while the current ad is expanded. onAdRequestFailed will not be called</string>
    <string name="anythink_basead_ad_text">AD</string>
    <string name="anythink_basead_click_empty">This ads does not support click to open</string>
    <string name="anythink_basead_click_fail">Failed to open Ads</string>
    <string name="anythink_btn_cancel">Cancel</string>
    <string name="anythink_btn_install">Install</string>
    <string name="anythink_btn_install_tip">You have downloaded the %s. Do you want to install it now?</string>
    <string name="anythink_btn_open">Open</string>
    <string name="anythink_btn_open_tip">You have installed the %s. Do you want to open it now?</string>
    <string name="anythink_confirm_dialog_application_desc">desc</string>
    <string name="anythink_confirm_dialog_application_permission">permission</string>
    <string name="anythink_confirm_dialog_download_now">Download</string>
    <string name="anythink_confirm_dialog_give_up">Give up</string>
    <string name="anythink_confirm_dialog_privacy_agreement">privacy</string>
    <string name="anythink_confirm_dialog_publisher">%s</string>
    <string name="anythink_confirm_dialog_version">v%s</string>
    <string name="anythink_cta_download_finished">Install now</string>
    <string name="anythink_cta_download_installed">Open now</string>
    <string name="anythink_cta_download_paused">Continue Download</string>
    <string name="anythink_cta_downloading">Downloading</string>
    <string name="anythink_interstitial_text_loading_default">The ad is loading...</string>
    <string name="anythink_interstitial_text_next_play">The next ad will play in _SEC_ s</string>
    <string name="anythink_location_allow">Allow</string>
    <string name="anythink_location_ask_title">Allow access your location？</string>
    <string name="anythink_location_deny">Disallow</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_msg">Watch the ad for %s seconds to get rewards, are you sure you want to leave?</string>
    <string name="anythink_myoffer_click_no_response">Unable to redirect</string>
    <string name="anythink_myoffer_confirm_msg">Open</string>
    <string name="anythink_myoffer_continue">Continue</string>
    <string name="anythink_myoffer_count_down_finish_rewarded">You have been rewarded</string>
    <string name="anythink_myoffer_count_down_to_rewarded">View for &lt;font color=#FFFFFF>%d&lt;/font> seconds to get the reward</string>
    <string name="anythink_myoffer_cta_install_now">Install Now</string>
    <string name="anythink_myoffer_cta_learn_more">Learn More</string>
    <string name="anythink_myoffer_feedback_abnormal">Abnormal</string>
    <string name="anythink_myoffer_feedback_black_white_screen">Show Failed</string>
    <string name="anythink_myoffer_feedback_can_not_close">Not Close</string>
    <string name="anythink_myoffer_feedback_fraud_ads">Fraud Ads</string>
    <string name="anythink_myoffer_feedback_hint">Enter suggestion</string>
    <string name="anythink_myoffer_feedback_induce_click">Induce Click</string>
    <string name="anythink_myoffer_feedback_not_interesting">Boring</string>
    <string name="anythink_myoffer_feedback_plagiarism">Plagiarism</string>
    <string name="anythink_myoffer_feedback_report">Report</string>
    <string name="anythink_myoffer_feedback_submit">Submit</string>
    <string name="anythink_myoffer_feedback_suggestion">Suggestion</string>
    <string name="anythink_myoffer_feedback_text">Feedback</string>
    <string name="anythink_myoffer_feedback_video_freeze">Video Freeze</string>
    <string name="anythink_myoffer_feedback_violation_of_laws">Illegal</string>
    <string name="anythink_myoffer_feedback_vulgar_porn">Vulgar porn</string>
    <string name="anythink_myoffer_g2c_chop_once_subtitle">Click sword, receive a limited-time benefit</string>
    <string name="anythink_myoffer_g2c_chop_once_title">Chop and receive Limited-time reward</string>
    <string name="anythink_myoffer_g2c_fuu_ori_hint">Slide to jump</string>
    <string name="anythink_myoffer_g2c_fuu_ori_hint_small">Slide to jump</string>
    <string name="anythink_myoffer_g2c_hint_text">You can click the content below or the button to get more details</string>
    <string name="anythink_myoffer_g2c_inner_ct_cta">Get It</string>
    <string name="anythink_myoffer_g2c_inner_ct_hint">Event is updated irregularly, actual content third-party following the redirect shall prevail</string>
    <string name="anythink_myoffer_g2c_inner_ct_subtitle">Limited-Time Benefits Delivered Daily</string>
    <string name="anythink_myoffer_g2c_inner_ct_tile_end">End</string>
    <string name="anythink_myoffer_g2c_inner_ct_tile_start">Time Limited</string>
    <string name="anythink_myoffer_g2c_inner_ct_title">Congratulations</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text1">Ignore ads to view details</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text2">continue when you return</string>
    <string name="anythink_myoffer_g2c_jump_confirm_ignore">Ignore</string>
    <string name="anythink_myoffer_g2c_lucky_bag_subtitle">Click lucky bag, receive a limited-time benefit</string>
    <string name="anythink_myoffer_g2c_lucky_bag_title">Limited-time Surprise Lucky Bag</string>
    <string name="anythink_myoffer_g2c_puzzle_v2_hint">Try dragging</string>
    <string name="anythink_myoffer_g2c_puzzle_v2_subtitle">Slide lucky bag, receive a limited-time benefit</string>
    <string name="anythink_myoffer_g2c_puzzle_v2_title">Slide puzzle for a surprise</string>
    <string name="anythink_myoffer_g2c_question_dialog_default_answer">AD</string>
    <string name="anythink_myoffer_g2c_question_dialog_hint">Note: Please select and browse the relevant content</string>
    <string name="anythink_myoffer_g2c_question_dialog_title">Which option does the video content relate to?</string>
    <string name="anythink_myoffer_g2c_seek_to_click">Drag to complete the puzzle</string>
    <string name="anythink_myoffer_g2c_slide_to_click">Swipe to view more</string>
    <string name="anythink_myoffer_g2c_slide_to_click2">Slide to unlock more</string>
    <string name="anythink_myoffer_give_up">Cancel</string>
    <string name="anythink_myoffer_inctask_cts_completed">Task Completed!</string>
    <string name="anythink_myoffer_inctask_cts_completed_cta">Received reward</string>
    <string name="anythink_myoffer_inctask_cts_cta_text">AD free</string>
    <string name="anythink_myoffer_inctask_cts_hint">Click and experience content below for %ds</string>
    <string name="anythink_myoffer_inctask_cts_hint2">Click and experience content</string>
    <string name="anythink_myoffer_inctask_cts_subtitle">Complete task below, immediately receive reward</string>
    <string name="anythink_myoffer_inctask_cts_time">%d s</string>
    <string name="anythink_myoffer_inctask_cts_title">Limited-Time Privilege: AD free</string>
    <string name="anythink_myoffer_inctask_qa_default_wrong">Orange</string>
    <string name="anythink_myoffer_inctask_qa_subtitle">Answer question correctly, can obtain reward %ds in advance</string>
    <string name="klevin_native_detail_privacy_protocol">隐私协约</string>
    <string name="klevin_native_detail_summary_title">简介</string>
    <string name="klevin_native_detail_update_time_title">更新</string>
    <string name="klevin_native_detail_update_version_title">版本</string>
    <string name="klevin_native_detail_user_protocol">用户协约</string>
</resources>