<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <FrameLayout android:id="@id/klevin_layout_video_frame" android:background="#000000" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.tencent.klevin.ads.nativ.view.NativeMediaView android:id="@id/klevin_media_view" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <ImageView android:id="@id/klevin_btn_back" android:layout_width="24.0dp" android:layout_height="24.0dp" android:layout_marginLeft="8.0dp" android:layout_marginTop="8.0dp" android:src="@mipmap/klevin_page_back_1" android:scaleType="fitXY" />
        </FrameLayout>
        <ScrollView android:orientation="vertical" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/klevin_img_app_icon" android:layout_width="60.0dp" android:layout_height="60.0dp" android:layout_marginLeft="20.0dp" android:layout_marginTop="25.0dp" android:scaleType="fitXY" />
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/klevin_native_detail_title_color" android:ellipsize="end" android:id="@id/klevin_txt_app_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dp" android:layout_marginRight="30.0dp" android:maxLines="1" android:singleLine="true" android:layout_toRightOf="@id/klevin_img_app_icon" android:layout_alignTop="@id/klevin_img_app_icon" />
                <TextView android:textSize="12.0sp" android:textColor="@color/klevin_native_detail_content_color" android:ellipsize="end" android:id="@id/klevin_txt_developer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginRight="30.0dp" android:maxLines="1" android:singleLine="true" android:layout_below="@id/klevin_txt_app_name" android:layout_alignLeft="@id/klevin_txt_app_name" />
                <View android:id="@id/klevin_divider_summary" android:background="@color/klevin_native_detail_divider_color" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginRight="30.0dp" android:layout_alignLeft="@id/klevin_txt_app_name" android:layout_alignBottom="@id/klevin_img_app_icon" />
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/klevin_native_detail_title_color" android:id="@id/klevin_txt_summary_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/klevin_native_detail_summary_title" android:layout_below="@id/klevin_divider_summary" android:layout_alignLeft="@id/klevin_divider_summary" />
                <TextView android:textSize="12.0sp" android:textColor="@color/klevin_native_detail_content_color" android:id="@id/klevin_txt_summary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dp" android:layout_marginRight="48.0dp" android:layout_below="@id/klevin_txt_summary_title" android:layout_alignLeft="@id/klevin_txt_summary_title" />
                <View android:id="@id/klevin_divider_info" android:background="@color/klevin_native_detail_divider_color" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="30.0dp" android:layout_below="@id/klevin_txt_summary" android:layout_alignLeft="@id/klevin_txt_app_name" />
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/klevin_native_detail_title_color" android:id="@id/klevin_txt_update_time_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/klevin_native_detail_update_time_title" android:layout_below="@id/klevin_divider_info" android:layout_alignLeft="@id/klevin_divider_info" />
                <TextView android:textSize="12.0sp" android:textColor="@color/klevin_native_detail_content_color" android:ellipsize="end" android:id="@id/klevin_txt_update_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:maxLines="1" android:singleLine="true" android:layout_toLeftOf="@id/klevin_txt_version_title" android:layout_below="@id/klevin_txt_update_time_title" android:layout_alignLeft="@id/klevin_txt_update_time_title" />
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/klevin_native_detail_title_color" android:id="@id/klevin_txt_version_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="65.0dp" android:text="@string/klevin_native_detail_update_version_title" android:layout_alignTop="@id/klevin_txt_update_time_title" android:layout_alignRight="@id/klevin_divider_info" />
                <TextView android:textSize="12.0sp" android:textColor="@color/klevin_native_detail_content_color" android:ellipsize="end" android:id="@id/klevin_txt_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:maxLines="1" android:singleLine="true" android:layout_below="@id/klevin_txt_version_title" android:layout_alignLeft="@id/klevin_txt_version_title" android:layout_alignRight="@id/klevin_divider_info" />
                <View android:id="@id/klevin_divider_protocol" android:background="@color/klevin_native_detail_divider_color" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="30.0dp" android:layout_below="@id/klevin_txt_update_time" android:layout_alignLeft="@id/klevin_txt_app_name" />
                <TextView android:textSize="12.0sp" android:textColor="@color/klevin_native_detail_link_color" android:gravity="center_vertical" android:id="@id/klevin_txt_user_protocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/klevin_native_detail_user_protocol" android:drawableRight="@mipmap/klevin_arrow_right_1" android:drawablePadding="0.0dp" android:layout_below="@id/klevin_divider_protocol" android:layout_alignLeft="@id/klevin_divider_protocol" />
                <TextView android:textSize="12.0sp" android:textColor="@color/klevin_native_detail_link_color" android:gravity="center_vertical" android:id="@id/klevin_txt_privacy_protocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dp" android:text="@string/klevin_native_detail_privacy_protocol" android:drawableRight="@mipmap/klevin_arrow_right_1" android:drawablePadding="0.0dp" android:layout_below="@id/klevin_txt_user_protocol" android:layout_alignLeft="@id/klevin_divider_protocol" />
                <View android:layout_width="0.0dp" android:layout_height="80.0dp" android:layout_below="@id/klevin_txt_privacy_protocol" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
    <com.tencent.klevin.ads.widget.DownloadProgressBar android:layout_gravity="center|bottom" android:id="@id/klevin_btn_download" android:padding="100.0dp" android:layout_width="match_parent" android:layout_height="40.0dp" android:layout_marginLeft="20.0dp" android:layout_marginRight="20.0dp" android:layout_marginBottom="30.0dp" />
</FrameLayout>
